--- a/mpd/.config/mpd/mpd.conf
+++ b/mpd/.config/mpd/mpd.conf
@@ -398,3 +398,6 @@ audio_output {
 filesystem_charset		"UTF-8"
 #
 ###############################################################################
+
+# vim: set ft=dosini:
+# kate: space-indent on; indent-width 4; syntax ini;
