--- a/neofetch/.config/neofetch/config.conf
+++ b/neofetch/.config/neofetch/config.conf
@@ -763,3 +763,6 @@ background_color=
 # Default: 'off'
 # Values: 'on', 'off'
 stdout="off"
+
+# vim: set ft=bash:
+# kate: space-indent on; indent-width 4; syntax bash;
