--- a/pacman/.config/pacman/makepkg.conf
+++ b/pacman/.config/pacman/makepkg.conf
@@ -148,3 +148,5 @@ COMPRESSLZ=(lzip -c -f --threads=0)
 #
 PKGEXT='.pkg.tar.zst'
 SRCEXT='.src.tar.zst'
+
+# kate: space-indent on; indent-width 4; syntax bash;
