--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -72,3 +72,5 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 #git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
+
+# kate: space-indent on; indent-width 4; syntax bash;
