--- a/git/.config/git/aliases.config
+++ b/git/.config/git/aliases.config
@@ -23,3 +23,4 @@
     list-conflict = diff --name-only --diff-filter=U
 
 # vim: set ft=gitconfig et:
+# kate: space-indent on; indent-width 4; syntax ini;
