git: don't use italic for '<' and '>'

--- a/git/.config/git/aliases.config
+++ b/git/.config/git/aliases.config
@@ -9,8 +9,8 @@
     # List contributors with number of commits
     contributors = shortlog --summary --numbered --email --group=author
     
-    slog = log --all --decorate --oneline --graph --format='%C(bold yellow)%h%Creset - %s %C(green)(%cr)%Creset by %C(bold blue)%an%Creset %C(italic cyan)<%ae>%Creset %C(red)%d%Creset'
-    linked-log = !git-linked log --all --decorate --oneline --graph --format='%C(bold yellow)%h%Creset - %s %C(green)(%cr)%Creset by %C(bold blue)%an%Creset %C(italic cyan)<%ae>%Creset %C(red)%d%Creset'
+    slog = log --all --decorate --oneline --graph --format='%C(bold yellow)%h%Creset - %s %C(green)(%cr)%Creset by %C(bold blue)%an%Creset %C(cyan)<%C(italic)%ae%C(no-italic)>%Creset %C(red)%d%Creset'
+    linked-log = !git-linked log --all --decorate --oneline --graph --format='%C(bold yellow)%h%Creset - %s %C(green)(%cr)%Creset by %C(bold blue)%an%Creset %C(cyan)<%C(italic)%ae%C(no-italic)>%Creset %C(red)%d%Creset'
     
     # Remove branches that have already been merged with main.
     # a.k.a. 'delete merged'
