gpg: set `s2k-digest-algo SHA512`

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -15,7 +15,10 @@ personal-digest-preferences SHA512 SHA384 SHA256 SHA224
 # On the other hand, there is only one OpenPGP implementation called GNUPG in practice.
 cert-digest-algo SHA512
 default-preference-list SHA512 SHA384 SHA256 SHA224 AES256 AES192 AES CAST5 ZLIB BZIP2 ZIP Uncompressed
-personal-cipher-preferences CAMELLIA256 TWOFISH AES256 CAMELLIA192 AES192 CAMELLIA128 AES BLOWFISH CAST5 3DES
+personal-cipher-preferences CAMELLIA256 AES256 TWOFISH CAMELLIA192 AES192 CAMELLIA128 AES BLOWFISH CAST5 3DES
+# s2k-cipher-algo is unset because we have set personal-cipher-preferences
+#s2k-cipher-algo AES256
+s2k-digest-algo SHA512
 
 # https://wiki.archlinux.org/title/GnuPG#Always_show_long_ID's_and_fingerprints
 keyid-format 0xlong
