ssh: set publickey for GitHub

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -30,6 +30,7 @@ Host aur aur.archlinux.org
 
 Host github.com
     User git
+    IdentityFile ~/.ssh/06F96A0FB5AD258D.pub
     ProxyUseFdpass yes
     # socks5 proxy
     ProxyCommand nc -F -x localhost:1089 -X 5 %h %p
