--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -8,19 +8,6 @@ KexAlgorithms curve25519-sha256,curve25519-sha256@libssh.org,diffie-hellman-grou
 MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com
 HostKeyAlgorithms ssh-ed25519,ssh-ed25519-cert-v01@openssh.com,sk-ssh-ed25519@openssh.com,sk-ssh-ed25519-cert-v01@openssh.com,rsa-sha2-256,rsa-sha2-256-cert-v01@openssh.com,rsa-sha2-512,rsa-sha2-512-cert-v01@openssh.com
 
-ControlMaster auto
-ControlPath ~/.ssh/socket/%h-%p-%r
-ControlPersist yes
-
-# Keep Alive
-ServerAliveInterval 120
-
-# Enable compression to optimize in bad network environment
-Compression yes
-
-# https://wiki.archlinux.org/title/GnuPG#Configure_pinentry_to_use_the_correct_TTY
-Match host * exec "gpg-connect-agent UPDATESTARTUPTTY /bye"
-
 Include config.d/*
 
 Host aur aur.archlinux.org
@@ -37,4 +24,16 @@ Host github.com
     # http proxy
     #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
 
+Host *
+    ControlMaster auto
+    ControlPath ~/.ssh/socket/%h-%p-%r
+    ControlPersist 4h
+    # Keep Alive
+    ServerAliveInterval 120
+    # Enable compression to optimize in bad network environment
+    Compression yes
+
+# https://wiki.archlinux.org/title/GnuPG#Configure_pinentry_to_use_the_correct_TTY
+Match host * exec "gpg-connect-agent UPDATESTARTUPTTY /bye"
+    
 # vim: sts=4 et
