git: set max-line-distance=1 to fit git diff --word-diff

--- a/git/.config/git/format.config
+++ b/git/.config/git/format.config
@@ -71,6 +71,8 @@
     hyperlinks                    = true
     navigate                      = true
     navigate-regex                = '^(commit|added:|removed:|renamed:|modified:|•)'
+    max-line-distance             = 1
+    #word-diff-regex               = '\S+'
     # FIXME: As a workarround, https://github.com/dandavison/delta/issues/299#issuecomment-997388757
     side-by-side = true
 
