fontconfig: improve Fira Code

--- a/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
+++ b/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
@@ -60,5 +60,21 @@
       <string>cv95 2</string> <!-- better >= -->
     </edit>
   </match>
+  <match target="pattern">
+    <test name="family" compare="eq" ignore-blanks="true">
+      <string>Fira Code</string>
+    </test>
+    <edit name="fontfeatures" mode="append">
+      <string>cv01 on</string> <!-- better a -->
+      <string>cv02 on</string> <!-- better g -->
+      <string>cv04 on</string> <!-- better i -->
+      <string>cv09 on</string> <!-- better l -->
+      <string>ss05 on</string> <!-- better @ -->
+      <string>ss03 on</string> <!-- better & -->
+      <string>cv16 on</string> <!-- better star -->
+      <string>ss10 off</string> <!-- disable progress bar -->
+    </edit>
+  </match>
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
+<!-- kate: space-indent on; indent-width 4; -->
