--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -110,6 +110,7 @@
       <!-- We don't replace it with Iosevka because Firefox and Qt don't support OpenType feature, so I can't use ss10 variant -->
       <string>Iosevka SS10</string>
       <string>Iosevka</string>
+      <string>Fira Code</string>
       <string>Monaco</string>
       <string>Sarasa Term SC</string>
       <string>Sarasa Term TC</string>
@@ -132,6 +133,7 @@
     <edit binding="same" mode="prepend" name="family">
       <string>Iosevka SS10</string>
       <string>Iosevka</string>
+      <string>Fira Code</string>
       <string>Monaco</string>
       <string>Sarasa Term SC</string>
       <string>Sarasa Term TC</string>
@@ -170,3 +172,4 @@
   </match>
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
+<!-- kate: space-indent on; indent-width 4; -->
