kitty: add Fire Code features config

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -13,8 +13,9 @@ disable_ligatures cursor
 
 # Fonts Feature Configuration
 # https://sw.kovidgoyal.net/kitty/conf/#opt-kitty.font_features
-font_feature Iosevka +ss10 +zero cv49=1 cv52=8 cv82=5 cv83=2 cv87=1 cv95=2
-font_feature Iosevka-Term +ss10 +zero cv49=1 cv52=8 cv82=5 cv83=2 cv87=1 cv95=2
+font_features Iosevka +ss10 +zero cv49=1 cv52=8 cv82=5 cv83=2 cv87=1 cv95=2
+font_features Iosevka-Term +ss10 +zero cv49=1 cv52=8 cv82=5 cv83=2 cv87=1 cv95=2
+font_features FiraCode-Regular +cv01 +cv02 +cv04 +cv09 +ss05 +ss03 +cv16 -ss10 
 
 # Cursor Shape (available: block beam underline)
 cursor_shape beam
