fontconfig: using distinguishable `a`

--- a/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
+++ b/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
@@ -65,14 +65,13 @@
       <string>Fira Code</string>
     </test>
     <edit name="fontfeatures" mode="append">
-      <string>cv01 on</string> <!-- better a -->
       <string>cv02 on</string> <!-- better g -->
       <string>cv04 on</string> <!-- better i -->
       <string>cv09 on</string> <!-- better l -->
       <string>ss05 on</string> <!-- better @ -->
       <string>ss03 on</string> <!-- better & -->
       <string>cv16 on</string> <!-- better star -->
-      <string>ss10 off</string> <!-- disable progress bar -->
+      <string>ss10 off</string> <!-- disable bad ligature -->
     </edit>
   </match>
 </fontconfig>
