tmux,zsh: fix TERM

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -39,7 +39,7 @@ set -g window-status-separator ""
 set -g mouse on
 
 ## set the default TERM
-set -g default-terminal tmux
+set -g default-terminal tmux-256color
 
 ## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
 set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
