ssh: using `Match all`
[1]: https://t.me/iBugThought/2031
[2]: https://unix.stackexchange.com/q/67334/211239

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -24,7 +24,7 @@ Host github.com
     # http proxy
     #ProxyCommand nc -F -x localhost:8889 -X connect %h %p
 
-Host *
+Match all
     ControlMaster auto
     ControlPath ~/.ssh/socket/%h-%p-%r
     ControlPersist 4h
