zsh(plugin): add history-search-multi-word

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "zsh/.config/zsh.d/plugins/fast-syntax-highlighting"]
 	path = zsh/.config/zsh.d/plugins/fast-syntax-highlighting
 	url = https://github.com/zdharma-continuum/fast-syntax-highlighting.git
+[submodule "zsh/.config/zsh.d/plugins/history-search-multi-word"]
+	path = zsh/.config/zsh.d/plugins/history-search-multi-word
+	url = https://github.com/zdharma-continuum/history-search-multi-word.git
