ssh: optimize file structure

--- a/ssh/.ssh/config
+++ b/ssh/.ssh/config
@@ -1,13 +1,3 @@
-# https://infosec.mozilla.org/guidelines/openssh.html#modern
-# https://www.ssh-audit.com/hardening_guides.html
-# Ensure KnownHosts are unreadable if leaked - it is otherwise easier to know which hosts your keys have access to.
-HashKnownHosts yes
-# Host keys the client accepts - order here is honored by OpenSSH
-Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
-KexAlgorithms curve25519-sha256,curve25519-sha256@libssh.org,diffie-hellman-group16-sha512,diffie-hellman-group18-sha512,diffie-hellman-group-exchange-sha256
-MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com
-HostKeyAlgorithms ssh-ed25519,ssh-ed25519-cert-v01@openssh.com,sk-ssh-ed25519@openssh.com,sk-ssh-ed25519-cert-v01@openssh.com,rsa-sha2-256,rsa-sha2-256-cert-v01@openssh.com,rsa-sha2-512,rsa-sha2-512-cert-v01@openssh.com
-
 Include config.d/*
 
 Host aur aur.archlinux.org
@@ -32,8 +22,18 @@ Match all
     ServerAliveInterval 120
     # Enable compression to optimize in bad network environment
     Compression yes
+    # https://infosec.mozilla.org/guidelines/openssh.html#modern
+    # https://www.ssh-audit.com/hardening_guides.html
+    # Ensure KnownHosts are unreadable if leaked - it is otherwise easier to know which hosts your keys have access to.
+    HashKnownHosts yes
+    # Host keys the client accepts - order here is honored by OpenSSH
+    Ciphers chacha20-poly1305@openssh.com,aes256-gcm@openssh.com,aes128-gcm@openssh.com,aes256-ctr,aes192-ctr,aes128-ctr
+    KexAlgorithms curve25519-sha256,curve25519-sha256@libssh.org,diffie-hellman-group16-sha512,diffie-hellman-group18-sha512,diffie-hellman-group-exchange-sha256
+    MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com
+    HostKeyAlgorithms ssh-ed25519,ssh-ed25519-cert-v01@openssh.com,sk-ssh-ed25519@openssh.com,sk-ssh-ed25519-cert-v01@openssh.com,rsa-sha2-256,rsa-sha2-256-cert-v01@openssh.com,rsa-sha2-512,rsa-sha2-512-cert-v01@openssh.com
 
 # https://wiki.archlinux.org/title/GnuPG#Configure_pinentry_to_use_the_correct_TTY
 Match host * exec "gpg-connect-agent UPDATESTARTUPTTY /bye"
     
-# vim: sts=4 et
+# vim: sts=4 et:
+# kate: space-indent on; indent-width 4;
