fontconfig(telegram): change telegram font to Sarasa Gothic to fix line height problem
[1]: https://t.me/archlinuxcn_group/2230054

--- a/fontconfig/.config/fontconfig/conf.d/45-setting.conf
+++ b/fontconfig/.config/fontconfig/conf.d/45-setting.conf
@@ -68,5 +68,17 @@
       <bool>false</bool>
     </edit>
   </match>
+  <match target="scan">
+    <test qual="any" name="family"  compare="contains">
+      <string>Sarasa</string>
+    </test>
+    <edit name="hinting" mode="assign">
+      <bool>false</bool>
+    </edit>
+    <edit name="autohint" mode="assign">
+      <bool>false</bool>
+    </edit>
+  </match>
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
+<!-- kate: space-indent on; indent-width 2; -->
