--- a/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
+++ b/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
@@ -60,8 +60,8 @@
       <string>cv95 2</string> <!-- better >= -->
     </edit>
   </match>
-  <match target="pattern">
-    <test name="family" compare="eq" ignore-blanks="true">
+  <match target="scan">
+    <test name="family" compare="contains" ignore-blanks="true">
       <string>Fira Code</string>
     </test>
     <edit name="fontfeatures" mode="append">
@@ -76,4 +76,4 @@
   </match>
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
-<!-- kate: space-indent on; indent-width 4; -->
+<!-- kate: space-indent on; indent-width 2; -->
