--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -15,6 +15,7 @@
   <!-- Default font (no fc-match pattern) -->
   <match>
     <edit mode="prepend" name="family">
+      <string>Roboto</string>
       <string>Noto Sans CJK SC</string>
     </edit>
   </match>
@@ -26,6 +27,7 @@
     </test>
     <edit mode="prepend" name="family">
       <!-- 更改下一行即可, 以下同理 -->
+      <string>Roboto</string>
       <string>Noto Sans CJK SC</string>
     </edit>
   </match>
@@ -172,4 +174,4 @@
   </match>
 </fontconfig>
 <!-- vim: set nu sts=2 sw=2 et: -->
-<!-- kate: space-indent on; indent-width 4; -->
+<!-- kate: space-indent on; indent-width 2; -->
