git: using zdiff3 conflictStyle (need Git 2.35)

--- a/git/.config/git/format.config
+++ b/git/.config/git/format.config
@@ -77,7 +77,7 @@
     side-by-side = true
 
 [merge]
-    conflictstyle = diff3
+    conflictstyle = zdiff3
 
 # vim: set ft=gitconfig et:
 # kate: space-indent on; indent-width 4; syntax ini;
