git(alias): add fixup ~= git-revise

--- a/git/.config/git/aliases.config
+++ b/git/.config/git/aliases.config
@@ -22,5 +22,9 @@
     # List conflict files
     list-conflict = diff --name-only --diff-filter=U
 
+    # https://blog.filippo.io/git-fixup-amending-an-older-commit/
+    # We can use git revise instead
+    fixup = "!f() { TARGET=$(git rev-parse \"$1\"); shift; git commit --fixup=$TARGET ${@} && GIT_EDITOR=true git rebase -i --autostash --autosquash $TARGET^; }; f"
+
 # vim: set ft=gitconfig et:
 # kate: space-indent on; indent-width 4; syntax ini;
