--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -1,40 +1,57 @@
-# COLOUR (base16)
+#+---------+
+#+ Options +
+#+---------+
+set -g status-interval 1
+set -g status on
 
-# default statusbar colors
-set-option -g status-style "fg=#D8DEE9,bg=#3B4252"
+#+--------+
+#+ Status +
+#+--------+
+#+--- Layout ---+
+set -g status-justify left
 
-# default window title colors
-set-window-option -g window-status-style "fg=#D8DEE9,bg=default"
+#+--- Colors ---+
+set -g status-style bg=#3B4252,fg=white
 
-# active window title colors
-set-window-option -g window-status-current-style "fg=#5E81AC,bg=default"
+#+-------+
+#+ Panes +
+#+-------+
+set -g pane-border-style bg=default,fg=brightblack
+set -g pane-active-border-style bg=default,fg=blue
+set -g display-panes-colour black
+set -g display-panes-active-colour brightblack
 
-# pane border
-set-option -g pane-border-style "fg=#3B4252"
-set-option -g pane-active-border-style "fg=#434C5E"
+#+------------+
+#+ Clock Mode +
+#+------------+
+setw -g clock-mode-colour cyan
 
-# message text
-set-option -g message-style "fg=#E5E9F0,bg=#3B4252"
+#+----------+
+#+ Messages +
+#+---------+
+set -g message-style bg=brightblack,fg=cyan
+set -g message-command-style bg=brightblack,fg=cyan
 
-# pane number display
-set-option -g display-panes-active-colour "#BF616A"
-set-option -g display-panes-colour "#5E81AC"
+#+----------------+
+#+ Plugin Support +
+#+----------------+
+#+--- tmux-prefix-highlight ---+
+set -g @prefix_highlight_copy_mode_attr "fg=black,bg=brightcyan"
 
-# clock
-set-window-option -g clock-mode-colour "#BF616A"
+#+--------+
+#+ Status +
+#+--------+
+#+--- Bars ---+
+set -g status-left "#{prefix_highlight} #[fg=black,bg=bold][#S] "
+set -g status-right "Load: #[fg=green] #(cat /proc/loadavg | cut -f1,2,3 -d' ') | #[fg=white,bg=brightblack] %Y-%m-%d #[fg=white,bg=brightblack,nobold,noitalics,nounderscore]|#[fg=white,bg=brightblack] %H:%M #[fg=cyan,bg=brightblack,nobold,noitalics,nounderscore] #[fg=black,bg=cyan,nobold] #H "
 
-# copy mode highligh
-set-window-option -g mode-style "fg=#D8DEE9,bg=#434C5E"
+#+--- Windows ---+
+set -g window-status-format " #[fg=white,bg=brightblack]#I #[fg=white,bg=brightblack]#W #F"
+set -g window-status-current-format "#[fg=black,bg=blue] #I#[fg=black,bg=blue,nobold,noitalics,nounderscore] #[fg=black,bg=blue]#W #F"
+set -g window-status-separator " "
 
-# bell
-set-window-option -g window-status-bell-style "fg=#3B4252,bg=#88C0D0"
-
-set -g status-left "#{prefix_highlight} #[bg=bold] #S "
-set -g status-right " %Y-%m-%d #[bg=nobold,noitalics,nounderscore] %H:%M #[bg=nobold,noitalics,nounderscore] #[bg=bold] #H "
-
-set -g window-status-format " #I #W #F"
-set -g window-status-current-format " #I #W #F"
-set -g window-status-separator ""
+set -g status-left-length 100
+set -g status-right-length 100
 
 set -g mouse on
 
