fontconfig: add Blobemoji

--- a/fontconfig/.config/fontconfig/conf.d/50-generic.conf
+++ b/fontconfig/.config/fontconfig/conf.d/50-generic.conf
@@ -26,7 +26,15 @@
       <string>zh_CN</string>
     </test>
     <edit mode="prepend" name="family">
-      <!-- 更改下一行即可, 以下同理 -->
+      <string>Roboto</string>
+      <string>Noto Sans CJK SC</string>
+    </edit>
+  </match>
+  <match>
+    <test name="lang" compare="contains">
+      <string>zh-CN</string>
+    </test>
+    <edit mode="prepend" name="family">
       <string>Roboto</string>
       <string>Noto Sans CJK SC</string>
     </edit>
@@ -48,7 +56,8 @@
       <string>HanaMinA</string>
       <string>HanaMinB</string>
       <string>Twemoji</string>
-      <string>Twemoji Color Emoj</string>
+      <string>Twitter Color Emoji</string>
+      <string>Blobmoji</string>
       <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
@@ -69,7 +78,8 @@
       <string>HanaMinA</string>
       <string>HanaMinB</string>
       <string>Twemoji</string>
-      <string>Twemoji Color Emoj</string>
+      <string>Twitter Color Emoji</string>
+      <string>Blobmoji</string>
       <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
@@ -96,7 +106,8 @@
       <string>HanaMinA</string>
       <string>HanaMinB</string>
       <string>Twemoji</string>
-      <string>Twemoji Color Emoj</string>
+      <string>Twitter Color Emoji</string>
+      <string>Blobmoji</string>
       <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
@@ -122,7 +133,8 @@
       <string>HanaMinA</string>
       <string>HanaMinB</string>
       <string>Twemoji</string>
-      <string>Twemoji Color Emoj</string>
+      <string>Twitter Color Emoji</string>
+      <string>Blobmoji</string>
       <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
@@ -145,7 +157,8 @@
       <string>HanaMinA</string>
       <string>HanaMinB</string>
       <string>Twemoji</string>
-      <string>Twemoji Color Emoj</string>
+      <string>Twitter Color Emoji</string>
+      <string>Blobmoji</string>
       <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
@@ -166,7 +179,8 @@
           If FreeType support it, this problem will be solved.
           https://savannah.nongnu.org/bugs/?46141
       -->
-      <string>Twemoji Color Emoj</string>
+      <string>Twitter Color Emoji</string>
+      <string>Blobmoji</string>
       <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
