fontconfig: clean up

--- a/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
+++ b/fontconfig/.config/fontconfig/conf.d/47-font-features.conf
@@ -32,25 +32,11 @@
   
   <!-- Iosevka -->
   <match target="scan">
-    <test name="family" compare="eq" ignore-blanks="true">
+    <test name="family" compare="contains" ignore-blanks="true">
       <string>Iosevka</string>
     </test>
     <edit name="fontfeatures" mode="append">
       <string>ss10 on</string> <!-- using SS10 variant shape -->
-      <string>zero on</string> <!-- slashed zero -->
-      <string>cv49 1</string> <!-- straight y -->
-      <string>cv52 8</string> <!-- better beta -->
-      <string>cv82 5</string> <!-- I like this star -->
-      <string>cv83 2</string> <!-- underline, not too high, not too low -->
-      <string>cv87 1</string> <!-- better curly braces -->
-      <string>cv95 2</string> <!-- better >= -->
-    </edit>
-  </match>
-  <match target="scan">
-    <test name="family" compare="eq" ignore-blanks="true">
-      <string>Iosevka SS10</string>
-    </test>
-    <edit name="fontfeatures" mode="append">
       <string>zero on</string> <!-- slashed zero -->
       <string>cv49 1</string> <!-- straight y -->
       <string>cv52 8</string> <!-- better beta -->
