fontconfig: change emoji order for firefox
but not work for Twitter Color Emoji can't be filtered

--- a/fontconfig/.config/fontconfig/conf.d/52-telegram-font.conf
+++ b/fontconfig/.config/fontconfig/conf.d/52-telegram-font.conf
@@ -19,7 +19,7 @@
       <string>HanaMinA</string>
       <string>HanaMinB</string>
       <string>Twemoji</string>
-      <string>Twemoji Color Emoj</string>
+      <string>Twitter Color Emoji</string>
       <string>JoyPixels</string>
       <string>Noto Color Emoji</string>
       <string>Noto Emoji</string>
