gpg: switch to keys.gnupg.net

--- a/gpg/.gnupg/gpg.conf
+++ b/gpg/.gnupg/gpg.conf
@@ -43,3 +43,9 @@ with-subkey-fingerprint
 trust-model pgp
 # By  setting  --tofu-default-policy=unknown, this model can be used to implement the web of trust with TOFU's conflict detection algorithm, but without its assignment of positive trust values, which some security-conscious users don't like.
 tofu-default-policy unknown
+
+# Key Server
+keyserver hkps://keys.gnupg.net
+#keyserver hkps://keys.openpgp.org
+#keyserver hkps://keyserver.ubuntu.com
+#keyserver hkps://pgp.mit.edu
